appId: com.codingitwrong.maestrogha
---
- clearState
- launchApp
- runFlow:
    when:
      true: ${MAESTRO_IS_DEV}
    commands:
      - tapOn: "Enter URL manually"
      - inputText: "http://localhost:8081?disableOnboarding=1"
      - hideKeyboard
      - tapOn: "Connect"
